2007-06-22  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Tag.cs, CTagsProjectServiceExtension.cs, CTagsProject.cs,
	  CTagsTextEditorExtension.cs: The project that subclasses
	  CTagsProject is now responsible for adding the logic about which
	  tags should be added to the completion list window.

2007-06-21  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Tag.cs, CTagsCompletion.addin.xml, CTagsProject.cs,
	  CTagsTextEditorExtension.cs: Managed to get a completion window
	  with all the tags.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* CTagsCommandHandler.cs, CTagsCompletion.addin.xml: Added the
	  completion command.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* CTagsProjectServiceExtension.cs, CTagsProject.cs: Added a protected
	  field so that Projects that descend from CTagsProject may choose to
	  not have it's tags written.

2007-06-18  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Tag.cs: This is the class represents a tag entry in the tags file.
	* CTagsCommandHandler.cs: This is the default handler for the Complete
	  command, it should be executed when the user types ctrl+space.
	* CTagsCompletion.addin.xml: Added the CTagsServiceExtension and the
	  Complete command
	* CTagsProjectServiceExtension.cs: Changed to accomodate the new
	  design.
	* CTagsProject.cs: CTagsProject is an abstract class tha extends
	  Project, it should be extended by projects that wish to use
	  CTagsCompletion
