@@ -15,12 +15,13 @@
   </Configurations>
   <Contents>
     <File name="./CTagsCompletion.addin.xml" subtype="Code" buildaction="Nothing" />
-    <File name="./CTagsProject.cs" subtype="Code" buildaction="Compile" />
     <File name="./Makefile.am" subtype="Code" buildaction="Nothing" />
     <File name="./ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="./CTagsProjectServiceExtension.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tag.cs" subtype="Code" buildaction="Compile" />
     <File name="./CTagsTextEditorExtension.cs" subtype="Code" buildaction="Compile" />
+    <File name="./ITagsSpecialization.cs" subtype="Code" buildaction="Compile" />
+    <File name="./CTagsCompletionDataProvider.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
